<resources>
    <string name="app_name" translatable="false">TaivasTV7</string>
    <string name="label" translatable="false">Taivas TV7</string>
    <string name="tv7_logo" translatable="false">TV7</string>
    <string name="toast_something_went_wrong" translatable="false">Something went wrong :-(</string>
    <string name="start_stream">Start</string>
    <string name="pause_start_stream">Pause/Start</string>
    <string name="arrows">Arrows</string>
    <string name="arrow">Arrow</string>
    <string name="error">Error</string>
    <string name="arrow_down">Arrow down</string>
    <string name="arrow_up">Arrow up</string>

    <string name="toolbar_text">Kun sisältö ratkaisee</string>
    <string name="exit_question">Sulje Taivas TV7 sovellus</string>
    <string name="yes">OK</string>
    <string name="no">Peruuta</string>
    <string name="coming_on_channel">Tulossa kanavalta</string>
    <string name="today">Tänään</string>

    <string name="net_tv">Netti-TV</string>
    <string name="archive">Arkisto</string>
    <string name="guide">TV-opas</string>
    <string name="search">Haku</string>
    <string name="favorites">Suosikit</string>
    <string name="channel_info">Taivas TV7</string>
    <string name="about">Tietoja</string>

    <string name="we_recommend">Suosittelemme</string>
    <string name="most_viewed">Katsotuimmat</string>
    <string name="newest">Uusimmat</string>
    <string name="categories">Kategoriat</string>
    <string name="category">Kategoria</string>
    <string name="series">Sarja</string>
    <string name="topical_series">Ajankohtaiset sarjat</string>

    <string name="first_broadcast">Ensiesitys</string>
    <string name="duration">Kesto</string>
    <string name="episode">Jakso</string>
    <string name="aspect_ratio">Kuvasuhde</string>

    <string name="back">Takaisin</string>
    <string name="do_search">Hae</string>
    <string name="clear">Tyhjennä</string>
    <string name="search_results">Haku tulokset</string>

    <string name="no_hits">Ei hakuosumia</string>
    <string name="no_favorites">Ei lisättyjä suosikkeja</string>
    <string name="added_to_favorites">Lisätty suosikkeihin</string>
    <string name="removed_from_favorites">Poistettu suosikeista</string>

    <string name="app_package_title">App package:</string>
    <string name="app_version_title">App version:</string>
    <string name="os_version_title">OS version:</string>
    <string name="os_api_level_title">OS API level:</string>
    <string name="android_version_title">Android version:</string>
    <string name="device_title">Device:</string>
    <string name="model_and_product_title">Model (Product):</string>

    <string name="something_went_wrong">Something went wrong :-(</string>
    <string name="no_network_connection">No network connection :-(</string>
    <string name="network_request_failed">Network request failed :-(</string>
    <string name="network_request_timeout">Network request timeout :-(</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="delete_configurations">Delete configurations</string>
    <string name="video_status">Video status</string>
    <string name="favorites_eng">Favorites</string>
    <string name="search_history">Search history</string>
    <string name="items">items</string>
    <string name="delete_configuration_question">Delete configuration?</string>

    <string name="title_1">Näin syntyi TV7</string>
    <string name="title_1_chapter_1">Taivas TV7 syntyi vuonna 2003, kun kanavan toimitusjohtaja Martti Ojares koki saaneensa kutsun Jumalalta perustaa Suomeen ensimmäinen kristillinen tv-kanava.</string>
    <string name="title_1_chapter_2">Ojares oli juuri jäänyt eläkkeelle työstään Sanoma Oy:n varatoimitusjohtaja ja suunnitteli leppoisia eläkevuosia vaimonsa Mirja Ojareksen kanssa. Martti kuitenkin huomasi usein ajattelevansa sitä, kuinka yhteiskunta oli ajautumassa yhä kauemmas kristillisistä arvoista. Hänellä oli niin voimakas sisäinen tarve kertoa evankeliumin sanoma kaikille suomalaisille, ettei hän voinut kulkea kutsunsa ohi. Paras väline olisi tv-kanava, jossa esitettäisiin avoimesti kristillisiä ohjelmia ja joka näkyisi jokaisessa suomalaisessa kodissa. Martti kiteytti suunnitelmansa MTV3:n pääuutislähetyksessä toteamalla: ”TV7 on kanava, jossa Jeesus Kristus on Herra.”</string>
    <string name="title_1_chapter_3">Ensimmäinen ohjelma, kahden tunnin suora lähetys, käynnistyi 15.12.2003 klo 18. Ohjelman jälkeen esitettiin ensimmäinen osa kolmiosaisesta, vuonna 1979 ilmestyneestä elokuvasta Jeesus. Jo toisena iltana kiitollinen äiti kertoi Ojaresten pariskunnalle, että hänen poikansa oli löytänyt Jumalan katsoessaan Jeesus-elokuvaa. Vaikka kulunut vuosi kanavaa valmistellessa oli vaatinut monta uskonaskelta, sinä iltana toteutui Martin näky kristillisen kanavan tarpeellisuudesta.</string>
    <string name="title_1_chapter_4">Sittemmin tuhannet ihmiset ovat kertoneet uskoontuloista, parantumisista, rukousvastauksista ja rohkaisun sanoista, joita he ovat löytäneet TV7:n ohjelmien kautta. Vuosien jälkeen kanavan näky on edelleen sama: viedä ilosanoma Jumalan armosta ja Jeesuksen ristinkuolemasta kaikkialle maailmaan. Suomen lisäksi kanava on laajentunut myös naapurimaihin.</string>
    <string name="title_1_chapter_5">Ensimmäinen rinnakkaiskanava, vironkielinen Taevas TV7 perustettiin vuonna 2009. Kanava näkyy internetissä sekä Viron kaapelitalouksissa. Vuonna 2013 perustettu ruotsinkielinen Himlen TV7 näkyy internetissä, Apple TV:n ja Chromecastin kautta sekä kaapeli- ja IPTV-verkoissa Suomen ruotsinkielisillä alueilla. Venäjänkielinen Nebesa TV7 perustettiin loppuvuodesta 2016 ja se näkyy internetissä. Suomenkielisen Taivas TV7:n rinnalla on lisäksi suomenkielinen nettikanava TV7 Plus, joka on erikoistunut nuorten ohjelmiin ja suoriin lähetyksiin. Se perustettiin vuonna 2012.</string>
    <string name="title_1_chapter_6">TV7:llä on Jerusalemissa ulkomaantoimitus, joka tuottaa päivittäistä TV7 Israel News -uutislähetystä sekä Jerusalem studio -ajankohtaisohjelmaa. Ukrainan Poltavassa sijaitsevassa äänitysstudiossa käännetään ja äänitetään TV7:n ohjelmia venäjän kielelle.</string>

    <string name="title_2">Miksi TV7-kanava on olemassa?</string>
    <string name="title_2_chapter_1">Kanava toteuttaa Jeesuksen antamaa lähetyskäskyä (Matt. 28:16-20) viedä ilosanoma kaikkeen maailmaan. Taivas TV7:n toiminnan perustana on Jumalan sana. Kanava sitoutuu Apostoliseen uskontunnustukseen.</string>
    <string name="title_2_chapter_2">Kanavan talous perustuu kristilliseettisesti kestävään taloudenhoitoon (2. Moos. 20:2-17).</string>
    <string name="title_2_chapter_3">Kanavan tavoitteena on myös saattaa yhteen kristillisen kentän toimijoita. Eri kristillisistä yhteisöistä tulevat kristityt voivat oppia toisiltaan ja löytää vahvemman yhteyden keskenään (Matt. 22:36-40).</string>

    <string name="title_3">Miten TV-ohjelmat valitaan?</string>
    <string name="title_3_chapter_1">TV7:n ohjelmistosta päättää viikoittain kokoontuva ohjelmatiimi. Siihen kuuluvat TV7:n toimitusjohtaja ja toiminnanjohtaja sekä kanavan tuottajia ja toimittajia. Ohjelmiston sisällöstä vastaa kanavan toimitusjohtaja.</string>
    <string name="title_3_chapter_2">TV7 pyrkii esittämään monipuolista ja kansainvälistä kristillistä sisältöä. Ohjelmisto koostuu mm. lastenohjelmista, henkilökohtaisista todistuksista, elokuvista, haastatteluista, opetusohjelmista, musiikista, ajankohtaisohjelmista ja suorista esirukousohjelmista.</string>

    <string name="copyright">Copyright © Taivas TV7. Unauthorized publication of programs or subtitles is prohibited.</string>
</resources>
