<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sidebar"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sidebar">

    <LinearLayout
        android:id="@+id/tvMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:background="@drawable/menu_item_container">

        <ImageView
            android:id="@+id/tvMenuIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/tv" />

        <TextView
            android:id="@+id/tvMenuText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:visibility="gone"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/sidebar_text"
            android:text="@string/net_tv" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/archiveMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:background="@drawable/menu_item_container">

        <ImageView
            android:id="@+id/archiveMenuIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/archive" />

        <TextView
            android:id="@+id/archiveMenuText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:visibility="gone"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/sidebar_text"
            android:text="@string/archive" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/guideMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:background="@drawable/menu_item_container">

        <ImageView
            android:id="@+id/guideMenuIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/guide" />

        <TextView
            android:id="@+id/guideMenuText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:visibility="gone"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/sidebar_text"
            android:text="@string/guide" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/searchMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_item_container"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/searchMenuIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/search" />

        <TextView
            android:id="@+id/searchMenuText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/search"
            android:textColor="@color/sidebar_text"
            android:textSize="22sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favoritesMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:background="@drawable/menu_item_container">

        <ImageView
            android:id="@+id/favoritesMenuIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/favorites" />

        <TextView
            android:id="@+id/favoritesMenuText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:visibility="gone"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textColor="@color/sidebar_text"
            android:text="@string/favorites" />
    </LinearLayout>

</LinearLayout>
